# ngx_http_pow_gate

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.perf.yml  docker-compose.test.yml
.cargo/: config.toml
.github/workflows/: ci.yml  module-amd64.yml  module-arm64.yml  release.yml
assets/: challenge.html  solver.js
docker/: Dockerfile  nginx.test.conf
docs/: architecture.md  build.md  challenge-page.md  configuration.md  performance.md  protocol.md  testing.md
examples/: nginx.conf
perf/: Cargo.toml
perf/src/: main.rs
scripts/: perf.sh  test.sh
src/ngx-http-pow-gate/: Cargo.toml  build.rs
src/ngx-http-pow-gate/src/: access.rs  challenge.rs  config.rs  lib.rs  response.rs  runtime.rs  verifier.rs
src/ngx-http-pow-gate/src/engine/: clearance.rs  mod.rs  pow.rs
src/pow-gate-core/: Cargo.toml
src/pow-gate-core/benches/: engine.rs
src/pow-gate-core/src/: clearance.rs  codec.rs  lib.rs  mac.rs  pow.rs  proof.rs  ranges.rs  target.rs
src/pow-gate-core/tests/: clearance.rs  codec.rs  pow.rs  proof.rs  ranges.rs  target.rs
tests/integration/: Cargo.toml
tests/integration/src/: main.rs
