[package]
name = "pow-gate-perf"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone load generator (NOT a workspace member, like tests/integration). It
# measures the module's per-request impact against a live nginx, and reuses
# pow-gate-core to mint a clearance + sign per-request proofs (the real client
# primitives). See docs/performance.md.

[[bin]]
name = "pow-gate-perf"
path = "src/main.rs"

[dependencies]
pow-gate-core = { path = "../src/pow-gate-core" }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"

[profile.release]
opt-level = 3
