[package]
name = "pow-gate-e2e"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone project (NOT a workspace member of the module crate) so it never
# pulls in the nginx-dependent build. It depends only on the engine core plus an
# HTTP client, and walks the live challenge → solve → verify → cleared flow.

[[bin]]
name = "pow-gate-e2e"
path = "src/main.rs"

[dependencies]
pow-gate-core = { path = "../../src/pow-gate-core" }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
